integration-tests/src/tests/client/snapshots/integration_tests__tests__client__process_blocks__runtime_gas_price__100Tgas_pessimistic_receipt_gas_price with GasPriceHostFn.snap
---
source: integration-tests/src/tests/client/process_blocks.rs
expression: "new_result.receipts_outcome[0].outcome"
---
ExecutionOutcomeView {
    logs: [],
    receipt_ids: [
        `A72cpXvMoxodAJjr15tY788Rkof5LjV1XB4V6q47ZLKd`,
    ],
    gas_burnt: 2431259071024,
    tokens_burnt: 2431259071024000000000,
    executor_id: AccountId(
        "test0",
    ),
    status: SuccessValue(``),
    metadata: ExecutionMetadataView {
        version: 1,
        gas_profile: Some(
            [
                CostGasUsed {
                    cost_category: "WASM_HOST_COST",
                    cost: "BASE",
                    gas_used: 264768111,
                },
                CostGasUsed {
                    cost_category: "WASM_HOST_COST",
                    cost: "CONTRACT_LOADING_BASE",
                    gas_used: 35445963,
                },
                CostGasUsed {
                    cost_category: "WASM_HOST_COST",
                    cost: "CONTRACT_LOADING_BYTES",
                    gas_used: 61990500,
                },
                CostGasUsed {
                    cost_category: "WASM_HOST_COST",
                    cost: "WASM_INSTRUCTION",
                    gas_used: 119547501,
                },
                CostGasUsed {
                    cost_category: "WASM_HOST_COST",
                    cost: "WRITE_MEMORY_BASE",
                    gas_used: 2803794861,
                },
                CostGasUsed {
                    cost_category: "WASM_HOST_COST",
                    cost: "WRITE_MEMORY_BYTE",
                    gas_used: 43580352,
                },
            ],
        ),
    },
}
